Fix navbar alignment on ordernow page
Updated navbar to prevent text wrapping and improved layout and changed some css for good looking website

--- a/css/style.css
+++ b/css/style.css
@@ -94,16 +94,9 @@ header{
     margin-left: 2%;
     align-items: center;
 }
-nav{
-    display: flex; /* so that it can change acc. to mode (tab,mob,desktop)*/
-    justify-content: space-between;
-    text-align: left;
-    padding: 20px;
-    gap: 0; 
-    margin-left: 10px;
-} 
+
 .logo{
-    font-size: 28px;
+    font-size: 25px;
     font-weight: bolder;
     background-color: bisque;
     display: flex;     
@@ -111,19 +104,20 @@ nav{
 .logo #myacc{
   margin-left: 600px;
 }
+
 ul{
     list-style: none;
     display: flex;
-    gap: 25px;
+    gap: 20px;
     padding: 0%;
-    text-align: center;
     justify-content: space-between;
     margin: 0; 
     margin-left: 22%;
     background-color:#f2d9b4;
-    border-radius: 15px;
-    max-width: 750px;    /* limits overall navbar width*/
-    height: 25px;          /* reduces navbar height */
+     border-radius: 15px;
+      max-width: 750px;    /* limits overall navbar width*/
+  height: 25px;          /* reduces navbar height */
+  
 }
  li,a {
     color: rgb(32, 16, 1);
@@ -134,6 +128,11 @@ ul{
 a{
     color: rgb(43, 20, 2);
     text-decoration: none;
+
+      white-space: nowrap;   /* 🔥 stops line break */
+    /* text-decoration: none; */
+    font-weight: 600;
+    
 }
 nav{
     display: flex; /* so that it can change acc. to mode (tab,mob,desktop)*/
@@ -153,6 +152,7 @@ ul a li:hover {
 -2px means the element shifts 2 pixels upward.
 If it was +2px, it would move downward. */
 }
+
 #Unique_page{
     font-weight: bold;
     background-color: whitesmoke;
@@ -162,6 +162,40 @@ If it was +2px, it would move downward. */
 .videoad{
    grid-template-columns: repeat(auto-fit,minmax(500px,1fr));
    gap: 25px;
+}
+.content{
+  text-align: left;
+    margin-left: 0.1rem; 
+     margin-top: -40px;
+    flex-direction: column;
+    left: -50px;        /* move left */
+    bottom: 120px;     /* adjust vertically */
+}
+.content h1 {
+  font-size: 40px;
+  font-weight: bold;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  height: 30%;
+  color: rgb(60, 1, 1);
+  margin-bottom: 1rem;
+}
+ .buttons {
+  padding-top: 20px; /* gap betn text nd button*/
+  padding-left: 20px; /* gap from starting sentence or button*/
+  /* gap: 1rem; */
+}
+.btnnn {
+  text-decoration: none;
+  background-color: #4B2E05;
+  color: white;
+  padding: 12px 24px;
+  border-radius: 45px;
+  margin-right: 20px;
+  /* height: 50%; */
+} 
+.btnnn:hover {
+ background-color: bisque;
+ color: rgb(63, 3, 3);
 }
 
 /*about us*/
